tests/negative/10_invalid_syntax.nova
// EXPECT-ERROR: "syntax"
fn main() -> i32 {
    let x: i32 = ;  // syntax error
    return 0;
}
